Adds user defined functions